# agentgov

./: .coderabbit.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SUPPORT.md  codecov.yml  codemeta.json  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  semgrep.yml
docs/: enterprise-adoption.md
examples/: advisory-governance-policy.md  ai-work-evidence-packet.md
src/agentgov/: __init__.py  __main__.py  check.py  cli.py  init.py  registry.py  report.py
src/agentgov/hooks/: conflict-marker-scan.sh  no-stale-branches.sh  pii-guard.sh  pkg-manager-guard.sh  protected-paths.sh  push-gate.sh  safe-stash-guard.sh  secrets-guard.sh  work-resolution-gate.sh
tests/: test_check.py  test_cli.py  test_init.py  test_report.py
