[project]
name = "hapax-agentgov"
version = "0.3.1"
description = "Governance hooks for AI coding agents — enforce safety, git hygiene, and project rules via Claude Code hooks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "hapax-systems" }]
keywords = ["claude-code", "hooks", "governance", "ai-agents", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agentgov = "agentgov.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgov"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
